  * The following modules and associated configuration files are provided (but
    not enabled by default):
    access_compat, allowmethods, authz_dbd, cache_disk, data, log_debug, lua
    proxy_express, proxy_fcgi, proxy_fdpass, proxy_html, ratelimit, reflector
    remoteip, request, session, session_cookie, session_crypto, session_dbd
    (Closes: #400881)

  [ Stefan Fritsch ]

  * Use "dh --with autotools_dev" instead of patching config.sub/config.guess.
  * Only include conf.d/*.conf, not conf.d/*.
  * Don't create httpd.conf anymore. (Closes: #639383)
  * Add "AddCharset" for .brf files in default mod_mime config.
    (Closes: #402567)
  * Update the README.Debian file

 -- Arno Töll <debian@toell.net>  Thu, 16 Feb 2012 21:34:15 +0100

apache2 (2.2.22-1) unstable; urgency=low

   [ Stefan Fritsch ]
   * New upstream release, urgency medium due to security fixes:
     - Fix CVE-2012-0021: mod_log_config: DoS with '%{cookiename}C' log format
     - Fix CVE-2012-0031: Unprivileged child process could cause the parent to
       crash at shutdown
     - Fix CVE-2012-0053: Exposure of "httpOnly" cookies in code 400 error
       message.
   * Move httxt2dbm to apache2-utils
   * Adjust debian/control to point to new git repository.
 
   [ Arno Töll ]
   * Fix "typo in /etc/apache2/apache2.conf" (Closes: #653801)

 -- Stefan Fritsch <sf@debian.org>  Wed, 01 Feb 2012 21:49:04 +0100 

apache2 (2.2.21-5) unstable; urgency=low

  [ Arno Töll ]
  * Fix build failures introduced as regregression by the previous build. Debian
    buildds aren't rebuilding arch:all packages which caused problems for our
    unconditional copying into binary package. I was warned.

 -- Stefan Fritsch <sf@debian.org>  Thu, 29 Dec 2011 17:36:41 +0100

apache2 (2.2.21-4) unstable; urgency=low

  [ Stefan Fritsch ]

  * Security: Fix broken patch for CVE-2011-3607 (Integer overflow in
    ap_pregsub).
  * Optimize debian/rules again to improve build time by doing most work in a