@@ -1,3 +1,7 @@
 /usr/include/apache2
 /usr/share/apache2/build
 /usr/bin/apxs
+debian/debhelper/dh_apache2		/usr/bin
+debian/debhelper/apache2.pm		/usr/share/perl5/Debian/Debhelper/Sequence/
+debian/debhelper/postinst-apache2	/usr/share/debhelper/autoscripts/
+debian/debhelper/postrm-apache2		/usr/share/debhelper/autoscripts/
